# gst-streaming-server

./: .gitignore  Makefile.am  autogen.sh  configure.ac  gst-streaming-server.doap
debian/: .gitignore  README.Debian  README.source  changelog  control  copyright  create-changelog-entry  files  gst-streaming-server.default  gst-streaming-server.upstart  postinst  postrm  prerm  rules
doc/: Makefile.am  getting-started.xml  gss-http-server.xml  gst-streaming-server-docs.sgml  gst-streaming-server-sections.txt
doc/gss/: Makefile.am  getting-started.xml  gst-streaming-server-docs.sgml  gst-streaming-server-overrides.txt  gst-streaming-server-sections.txt  installation.xml
gst-streaming-server/: Makefile.am  gss-adaptive.c  gss-adaptive.h  gss-config.c  gss-config.h  gss-html.c  gss-html.h  gss-ism-parser.c  gss-ism-parser.h  gss-iso-atoms.h  gss-isom-boxes.h  gss-isom-dump.c  gss-isom.c  gss-isom.h  gss-log.c  gss-log.h  gss-manager.c  gss-manager.h  gss-metrics.c  gss-module.c  gss-module.h  gss-object.c  gss-object.h  gss-playready.c  gss-playready.h  gss-program.c  gss-program.h  gss-pull.c  gss-push.c  gss-resource.c  gss-resource.h  gss-rtsp.c  gss-server.c  gss-server.h  gss-session.c  gss-sglist.c  gss-sglist.h  gss-smooth-streaming.c  gss-smooth-streaming.h  gss-soup.c  (+11 more)
po/: POTFILES.in
tests/: Makefile.am  test.py
tests/check/: Makefile.am  sglist.c
tools/: Makefile.am  config  gss-info.c  gss-isom-tool.c  gss-server.c  gss-transcoder.c  gst-streaming-server.c  isom-parse-test.c  push-icecast-ogg  push-icecast-webm  push-mpeg-ts  vts-server.c
